<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insta Movies</string>
    <string name="api_terms">Powered by themoviedb.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="location_done">Location done</string>
    <string name="action_search">Search</string>
    <string name="search_placeholder">Search movie or theater...</string>
    <string name="action_feed">Feed</string>
    <string name="action_kind">Types</string>
    <string name="all">All</string>
    <string name="action_theaters">Movie theaters</string>
    <string name="header_next_showtimes">Next showtimes</string>
    <string name="header_all_nearest_showtimes">All closest showtimes</string>
    <string name="header_all_showtimes">All showtimes</string>
    <string name="loading">Loading data...</string>
    <string name="reload_feed">Reload movies feed</string>
    <string name="theater_dialog_choice">What do you want to do ?</string>
    <string name="sharing_string">I\'im going to see %1$s at %2$s at the %3$s. Interested ?</string>
    <string name="share_with">Share with</string>
    <string name="with">With</string>
    <string name="from">Directed by</string>
    <string name="kind">Types : </string>
    <string name="vote_average">Rate : </string>
    <string name="duration">Duration :</string>
    <string name="why_not">Why not!</string>
    <string name="no_way">No way!</string>
    <string name="favorites_empty">You must first add a movie to your favorites list!</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="favorites_contextual_selection_header">Select movies</string>
    <string name="delete_verification_header">Are you sure to delete these %1$d from your favorites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="movies_selected">%1$d selected movies</string>
    <string name="one_movie_selected">1 selected movie</string>
    <string name="no_more_next_showtimes">No upcoming showtimes</string>
    <string name="theaters">Movie theaters</string>
    <string name="action_favorites_movies">Favorite movies</string>
    <string name="action_favorites_theaters">Favorite movie theaters</string>
    <string name="action_about">About</string>
    <string name="share">Share</string>
    <string name="review">Rate</string>
    <string name="contact">Contact</string>
    <string name="about_text">%1$s version %2$s developed by tiwence</string>
    <string name="contact_subject">Email about Insta Movies app </string>
    <string name="contact_via">Contact with</string>
    <string name="share_via">Share with</string>
    <string name="please_turn_on_gps">You have to switch on your location to use Insta Movies.</string>
    <string name="informations">Informations</string>
    <string name="no_more_showtimes">Oh crap... No more showtimes for today. Try again later, or tomorrow morning !</string>
    <string name="add_favorite_movie">%1$s added to your favorite movies list</string>
    <string name="remove_favorite_movie">%1$s removed from your favorite movies list</string>
    <string name="remove_favorite_theater">%1$s removed from your favorite movie theaters list</string>
    <string name="add_favorite_theater">%1$s added to your favorite movie theaters list</string>
    <string name="no_favorite_movies_yet">You do not have favorite movies yet</string>
    <string name="no_favorite_theaters_yet">You do not have favorite movie theaters yet</string>
    <string name="in">In</string>
    <string name="action_select_all">Select all</string>
    <string name="location">Location in progress...</string>
    <string name="one_theater_selected">1 movie theater selected</string>
    <string name="theaters_selected">%1$d movie theaters selected</string>
    <string name="no_overview">No overview found</string>
    <string name="no_vote_average_yet">No vote average yet</string>

</resources>
