<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FeedActivity">

    <item
        android:id="@+id/action_search"
        app:actionLayout="@layout/search_layout"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="0"
        app:showAsAction="always|collapseActionView"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites_movies"
        android:orderInCategory="100"
        android:title="@string/action_favorites_movies"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites_theaters"
        android:orderInCategory="100"
        android:title="@string/action_favorites_theaters"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
